# notify-serverless

./: .gitignore  README.md  app.py  pyproject.toml
lambdas/publish/: handler.py
lambdas/publish/lambdas/deliver/: handler.py
lambdas/subscribe/: handler.py
lambdas/ws_connect/: handler.py
lambdas/ws_connect/lambdas/ws_disconnect/: handler.py
lambdas/ws_connect/lambdas/ws_disconnect/infra/: stack.py
lambdas/ws_connect/lambdas/ws_disconnect/infra/tests/unit/: test_subscribe.py
lambdas/ws_connect/lambdas/ws_disconnect/infra/tests/unit/tests/unit/: test_publish.py
lambdas/ws_connect/lambdas/ws_disconnect/infra/tests/unit/tests/unit/.github/workflows/: deploy.yml
