[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "notify-serverless"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aws-lambda-powertools>=2.30",
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
    "aws-cdk-lib>=2.130",
    "constructs>=10.3",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "moto[dynamodb,sns,sqs,apigatewayv2]>=5.0",
    "black>=24.0",
    "ruff>=0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=lambdas --cov-report=term-missing --cov-fail-under=70"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]

[tool.black]
line-length = 100
target-version = ["py312"]
